[gd_scene load_steps=35 format=2]

[ext_resource path="res://Meshes/GramasL_v0.tres" type="MeshLibrary" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://solo_env.tres" type="Environment" id=3]
[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Fonts/LuckiestGuy.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://prefabs/Cogumelos.tscn" type="PackedScene" id=6]
[ext_resource path="res://Ui/Img/LogoJogo.png" type="Texture" id=7]
[ext_resource path="res://prefabs/PlantaFlorAzul.tscn" type="PackedScene" id=8]
[ext_resource path="res://prefabs/fade.tscn" type="PackedScene" id=9]
[ext_resource path="res://language/Translate/btn_en_new_normal.png" type="Texture" id=10]
[ext_resource path="res://language/Translate/btn_en_return_normal.png" type="Texture" id=11]
[ext_resource path="res://language/Translate/btn_en_quit_normal.png" type="Texture" id=12]
[ext_resource path="res://language/Translate/btn_en_new_hover.png" type="Texture" id=13]
[ext_resource path="res://language/Translate/btn_en_return_hover.png" type="Texture" id=14]
[ext_resource path="res://language/Translate/btn_en_quit_hover.png" type="Texture" id=15]
[ext_resource path="res://language/Flags/btn_es.png" type="Texture" id=16]
[ext_resource path="res://language/Flags/btn_en.png" type="Texture" id=17]
[ext_resource path="res://language/Flags/btn_al.png" type="Texture" id=18]
[ext_resource path="res://Scripts/language.gd" type="Script" id=19]
[ext_resource path="res://Assets/Blender/ItensFloresta/Arvore4.glb" type="PackedScene" id=20]
[ext_resource path="res://Assets/Blender/ItensFloresta/TroncoChao.glb" type="PackedScene" id=21]
[ext_resource path="res://Assets/Blender/ItensIlhaPirata/Arbusto.glb" type="PackedScene" id=22]
[ext_resource path="res://language/Translate/btn_en_about_hover.png" type="Texture" id=23]
[ext_resource path="res://language/Translate/btn_en_about_normal.png" type="Texture" id=24]
[ext_resource path="res://prefabs/Water.tscn" type="PackedScene" id=25]

[sub_resource type="CapsuleMesh" id=3]

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Assets/Fonts/LuckiestGuy.ttf"

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = SubResource( 4 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://Assets/Fonts/LuckiestGuy.ttf"

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = SubResource( 11 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.8, 0.8, 0.8, 0.0313726 )

[sub_resource type="DynamicFont" id=8]
extra_spacing_char = 1
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
extra_spacing_char = 1
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
extra_spacing_char = 1
font_data = ExtResource( 5 )

[node name="Menu" type="Spatial"]
script = ExtResource( 2 )

[node name="GridMap" type="GridMap" parent="." groups=["wall"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.09536, 0, 8.12535 )
mesh_library = ExtResource( 1 )
data = {
"cells": PoolIntArray( 0, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 65535, 0, 0, 0, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 5, 2, 0, 6, 2, 0, 5, 4, 0, 6, 4, 0, 14, 4, 0, 15, 4, 0, 5, 5, 0, 6, 5, 0, 14, 5, 0, 15, 5, 0, 3, 65533, 0, 4, 65533, 0, 2, 65534, 0, 3, 65534, 0, 4, 65534, 0, 5, 65534, 0, 2, 65535, 0, 3, 65535, 0, 4, 65535, 0, 5, 65535, 0, 6, 65535, 0, 65531, 65535, 0, 65533, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="Water" parent="." instance=ExtResource( 25 )]

[node name="Cam" type="Spatial" parent="."]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 11, 2, 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="target" type="MeshInstance" parent="Cam"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
visible = false
mesh = SubResource( 3 )

[node name="Camera" type="Camera" parent="Cam"]
transform = Transform( -1, -6.18173e-08, 6.18172e-08, 0, 0.707107, 0.707106, -8.74228e-08, 0.707107, -0.707106, 0, 12, -10 )
environment = ExtResource( 3 )
projection = 1
current = true
size = 30.0
near = 0.5
__meta__ = {
"_edit_lock_": true
}

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.965926, 9.05292e-09, -0.258819, 6.94655e-09, 1, 9.05292e-09, 0.258819, 6.94655e-09, -0.965926, -2.7, 0, 7.8 )
light_color = Color( 0.635294, 0.541176, 0.207843, 1 )
light_energy = 0.45
shadow_enabled = true

[node name="player" parent="." instance=ExtResource( 4 )]
transform = Transform( -1, 0, -1.33118e-07, 0, 1, 0, 1.33118e-07, 0, -1, 8, 3, 9 )
script = null

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.00328481
anchor_top = 0.07
anchor_right = 1.00328
anchor_bottom = 0.07
margin_left = -0.363647
margin_top = 25.0
margin_right = -0.363647
margin_bottom = 107.0
custom_fonts/font = SubResource( 7 )
text = "CAT PUZZLE"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_bottom = 1.0
margin_top = 153.0
margin_right = 157.0
script = ExtResource( 19 )

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer"]
margin_right = 157.0
margin_bottom = 269.0
size_flags_vertical = 3

[node name="btn_new" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 273.0
margin_right = 157.0
margin_bottom = 319.0
custom_colors/font_color_hover = Color( 0.929412, 0.898039, 0.0431373, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/VBoxContainer/btn_new"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -373.0
margin_bottom = 652.0
color = Color( 0.0431373, 0.509804, 0.823529, 1 )

[node name="btn_new" type="TextureButton" parent="CanvasLayer/VBoxContainer/btn_new"]
margin_right = 157.0
margin_bottom = 52.0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 13 )
texture_focused = ExtResource( 13 )
expand = true

[node name="Separator1" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 323.0
margin_right = 157.0
margin_bottom = 327.0

[node name="Separator3" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 331.0
margin_right = 157.0
margin_bottom = 335.0

[node name="btn_resume" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 339.0
margin_right = 157.0
margin_bottom = 385.0
custom_colors/font_color_hover = Color( 0.929412, 0.898039, 0.0431373, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/VBoxContainer/btn_resume"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0431373, 0.509804, 0.823529, 1 )

[node name="btn_resume" type="TextureButton" parent="CanvasLayer/VBoxContainer/btn_resume"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 14 )
texture_focused = ExtResource( 14 )

[node name="Separator2" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 389.0
margin_right = 157.0
margin_bottom = 393.0

[node name="Separator4" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 397.0
margin_right = 157.0
margin_bottom = 401.0

[node name="btn_about" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 405.0
margin_right = 157.0
margin_bottom = 451.0
custom_colors/font_color_hover = Color( 0.929412, 0.898039, 0.0431373, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/VBoxContainer/btn_about"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0431373, 0.509804, 0.823529, 1 )

[node name="btn_about" type="TextureButton" parent="CanvasLayer/VBoxContainer/btn_about"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 24 )
texture_hover = ExtResource( 23 )
texture_focused = ExtResource( 23 )

[node name="Separator5" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 455.0
margin_right = 157.0
margin_bottom = 459.0

[node name="Separator6" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 463.0
margin_right = 157.0
margin_bottom = 467.0

[node name="btn_quit" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 471.0
margin_right = 157.0
margin_bottom = 517.0
custom_colors/font_color_hover = Color( 0.929412, 0.898039, 0.0431373, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/VBoxContainer/btn_quit"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0431373, 0.509804, 0.823529, 1 )

[node name="btn_quit" type="TextureButton" parent="CanvasLayer/VBoxContainer/btn_quit"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 15 )
texture_focused = ExtResource( 15 )

[node name="Control2" type="Control" parent="CanvasLayer/VBoxContainer"]
margin_top = 521.0
margin_right = 157.0
margin_bottom = 790.0
size_flags_vertical = 3

[node name="btn_en" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 794.0
margin_right = 157.0
margin_bottom = 817.0
custom_fonts/font = SubResource( 8 )
text = "English"
icon = ExtResource( 17 )
flat = true
align = 0
expand_icon = true

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
margin_top = 821.0
margin_right = 157.0
margin_bottom = 825.0

[node name="btn_es" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 829.0
margin_right = 157.0
margin_bottom = 852.0
custom_fonts/font = SubResource( 9 )
text = "Español"
icon = ExtResource( 16 )
flat = true
align = 0
expand_icon = true

[node name="HSeparator3" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
margin_top = 856.0
margin_right = 157.0
margin_bottom = 860.0

[node name="btn_de" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 864.0
margin_right = 157.0
margin_bottom = 887.0
custom_fonts/font = SubResource( 10 )
text = "Deutsch"
icon = ExtResource( 18 )
flat = true
align = 0
expand_icon = true

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
margin_top = 891.0
margin_right = 157.0
margin_bottom = 895.0

[node name="HSeparator4" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
margin_top = 899.0
margin_right = 157.0
margin_bottom = 903.0

[node name="HSeparator5" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
margin_top = 907.0
margin_right = 157.0
margin_bottom = 911.0

[node name="HSeparator6" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
margin_top = 915.0
margin_right = 157.0
margin_bottom = 919.0

[node name="HSeparator7" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
margin_top = 923.0
margin_right = 157.0
margin_bottom = 927.0

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 140, 137 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="fade" parent="CanvasLayer" instance=ExtResource( 9 )]
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Cogumelos" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 3, 18.9238 )

[node name="TroncoChao" parent="." instance=ExtResource( 21 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 5, 3, 7 )

[node name="Arvore4" parent="." instance=ExtResource( 20 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2, 3, 11 )

[node name="Arbusto" parent="." instance=ExtResource( 22 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 3, 9 )

[node name="Arbusto2" parent="." instance=ExtResource( 22 )]
transform = Transform( 1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 10, 3, 13 )

[node name="PlantaFlorAzul" parent="." instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -12, 3, 7 )

[connection signal="pressed" from="CanvasLayer/VBoxContainer/btn_new/btn_new" to="." method="_on_btn_new_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/btn_resume/btn_resume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/btn_about/btn_about" to="." method="_on_btn_about_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/btn_quit/btn_quit" to="." method="_on_btn_quit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
